Prospect,import,client,inventory

--- a/app/views/import/viewimport.html
+++ b/app/views/import/viewimport.html
@@ -7,12 +7,13 @@
 	    </ul>
 	    <div class="pull-right">
 	      <div class="btn-group">
-	         <a ng-show="import.processStatus == 'NEW'" ng-click="processFile()" class="btn btn-primary"><i class="icon-play icon-white"></i> Process File</a>
+	         <a ng-show="import.processStatus == 'NEW'" ng-click="processFile()" class="btn btn-primary"><i class="icon-play icon-white"></i> Process File <img alt="Loading"  ng-src="./images/cubic_loader.gif" ng-show="loading"></a>
 	         <a ng-show="import.processStatus != 'NEW'" ng-click="logFile()" class="btn btn-primary"><i class=" icon-download-alt icon-white"></i> Log File</a>
-	            <a ng-show="import.processStatus != 'NEW'" ng-click="downloadFile()" class="btn btn-primary"><i class=" icon-download-alt icon-white"></i> Download File</a>
-	         
-	         
+             <a ng-show="import.processStatus != 'NEW'" ng-click="downloadFile()" class="btn btn-primary"><i class=" icon-download-alt icon-white"></i> Download File</a>
 	      </div>
+	      
+		         	
+	         
 	    </div>
 	</div>
 	<div class="row paddedleft">
