--- a/app/views/system/mappingconfiguration.html
+++ b/app/views/system/mappingconfiguration.html
@@ -43,7 +43,7 @@
          </div>
       </tab>	
       
-  <tab heading="Hardware Mapping" select="getHardwareMappingData()" active="hardwarePlanMappingTab.hardwarePlanMappingTab1">
+  <tab heading="Hardware Mapping" select="getHardwareMappingData()" active="hardwarePlanMappingTab">
         <div class="pull-right btn-group">
           <a href="#/createhardwareplanmapping" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
         </div>
