--- a/app/views/organization/addEventPrice.html
+++ b/app/views/organization/addEventPrice.html
@@ -39,7 +39,7 @@
 			</tr>
              <tr>
                    <td width="50%">
-					<div class="control-group">
+					<div class="control-group" ng-show="hideForGame">
 						<label class="control-label" for="formatType"> {{'label.eventprice.formattype' | translate }}</label>
 						<div class="controls">
 							<select ng-model="formData.formatType"
