--- a/app/views/organization/createmedia.html
+++ b/app/views/organization/createmedia.html
@@ -13,16 +13,28 @@
         <fieldset>
           <legend>{{'label.media.newmedia' | translate}}</legend>
           <table width="100%">
-           <tr>
-                  <td width="50%">
+          <tr>
+          <td>
+          	<div class="control-group">
+            <label class="control-label" for="mediaCategory">{{ 'label.media.type' | translate }}</label>
+	          	<div class="controls">
+			       <button type="button" class="btn btn-primary" ng-model="mediaCategory" btn-radio="'Left'" ng-click="setMovieScreen()">Movies</button>
+			       <button type="button" class="btn btn-primary" ng-model="mediaCategory" btn-radio="'Right'" ng-click="setGameScreen()">Games</button>
+				</div>
+            </div>
+          </td>	
+          </tr>
+          <tr>
+          <td width="50%">
           <div class="control-group">
-            <label class="control-label" for="mediaTitle">{{ 'label.media.title' | translate }}</label>
+            <label  ng-show="hideForGame" class="control-label" for="mediaTitle">{{ 'label.media.title' | translate }}</label>
+            <label  ng-show="!hideForGame" class="control-label" for="mediaTitle">{{ 'label.game.title' | translate }}</label>
             <div class="controls">
               <input type="text" id="mediaTitle" ng-model="formData.mediaTitle">
             </div>
           </div>
           
-            <td width="50%">
+            <td width="50%" ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="contentProvider">{{ 'label.media.contentprovider' | translate }}</label>
             <div class="controls">
@@ -30,10 +42,18 @@
             </div>
           </div>
           </td>
+          <td>
+          <div class="control-group" ng-show="!hideForGame">
+            <label class="control-label" for="subject">{{ 'label.media.subject' | translate }}</label>
+            <div class="controls">
+            <input type="text" id="subject" ng-model="formData.subject">
+            </div>
+          </div>
+          </td>
           </tr>
            <tr>
-            <td width="50%">
-          <div class="control-group">
+            <td width="50%" ng-show="hideForGame">
+          <div class="control-group" >
             <label class="control-label" for="mediaType">{{ 'label.media.mediaType' | translate }}</label>
             <div class="controls">
                <select ng-model="formData.mediatype"  ng-options="mediaTypeData.id as mediaTypeData.value for mediaTypeData in mediaTypeDatas" value="{{mediaTypeData.id}}"></select>
@@ -41,7 +61,7 @@
           </div>
           </td>
           
-                  <td width="50%">
+          <td width="50%" ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="rated">{{ 'label.media.rated' | translate }}</label>
             <div class="controls">
@@ -51,7 +71,7 @@
           </td>
           </tr>
           <tr>
-            <td width="50%">
+            <td width="50%" ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="mediaCategoryId">{{ 'label.media.categeory' | translate }}</label>
             <div class="controls">
@@ -60,7 +80,7 @@
           </div>
           </td>
             
-               <td width="50%">
+          <td width="50%" ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="rating">{{ 'label.media.rating' | translate }}</label>
             <div class="controls">
@@ -71,7 +91,7 @@
             </tr>
             <tr>
              <td>
-          <div class="control-group">
+          <div class="control-group" ng-show="hideForGame">
             <label class="control-label" for="image">{{ 'label.media.poster' | translate }}</label>
             <div class="controls">
             <input type="text" id="image" ng-model="formData.mediaImage">
@@ -79,7 +99,7 @@
           </div>
           </td>
           <td>
-          <div class="control-group">
+          <div class="control-group" ng-show="hideForGame">
             <label class="control-label" for="status">{{ 'label.media.status' | translate }}</label>
             <div class="controls">
            <select ng-model="formData.status"  ng-options="mediaStatus.value as mediaStatus.value for mediaStatus in mediaStatus" value="{{mediaStatus.value}}"></select>
@@ -88,7 +108,7 @@
           </td>
           </tr>
           <tr>
-             <td>
+          <td ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="duration">{{ 'label.media.movieduration' | translate }}</label>
             <div class="controls">
@@ -97,7 +117,7 @@
           </div>
           </td>
           <td>
-          <div class="control-group">
+          <div class="control-group" ng-show="hideForGame">
             <label class="control-label" for="releaseDate">{{ 'label.media.releasedate' | translate }}</label>
             <div class="controls">
             <!-- <input type="text" id="releaseDate" ng-model="formData.releaseDate"> -->
@@ -115,7 +135,7 @@
             </div>
           </div>
           </td>
-          <td>
+          <td ng-show="hideForGame">
           <div class="control-group">
             <label class="control-label" for="subject">{{ 'label.media.subject' | translate }}</label>
             <div class="controls">
@@ -142,7 +162,7 @@
              </td>
          </tr>
          </table>
-         <table>
+         <table ng-show="hideForGame">
           <tr class="control-group">
                 <td>
                   <label class="control-label"><h4>{{ 'label.media.mediadetails' | translate }}</h4></label>
@@ -211,6 +231,42 @@
                 </td>
               </tr>
            </table>
+           <fieldset ng-show="!hideForGame">
+           <legend>Settlement's</legend>
+          <table ng-show="!hideForGame" id="gameTable">
+          <tr class="control-group">
+                <td>
+                    <form id="gameAttributes">
+                      <button ng-click="addGameMedia()" class="btn btn-primary"><i class="icon-plus icon-white"></i></button>
+                    </form>
+                </td>
+              </tr>
+              <tr class="span2"></tr>
+           </table>
+           <table class="table" width="100%" ng-show="gameData.length>0">
+                    <tr></tr>
+                    <tr class="graybg">
+                      <th>{{'table.game.sequence' | translate}}</th>
+                      <th>{{'table.game.contentprovider' | translate}}</th>
+                      <th>{{'table.game.category' | translate}}</th>
+                      <th>{{'table.game.source' | translate}}</th>
+                      <th>{{'table.game.service' | translate}}</th>
+                       <th>{{'table.game.type' | translate}}</th>
+                       <th>{{'table.game.amount' | translate}}</th>
+                    </tr>
+                    <tr ng-repeat="gd in gameData" >
+                      <td><input type="text" class="input-small" ng-model="gd.sequence" placeholder=""></td>
+                      <td><select ng-model="gd.mediaContentProvider" ng-options="mediaContentProvider.mCodeValue as mediaContentProvider.mCodeValue for mediaContentProvider in mediaContentProviders" class="input-large" value="{{mediaContentProvider.mCodeValue}}"></select></td>
+                      <td><select ng-model="gd.mediaCategory" ng-options="category.mCodeValue as category.mCodeValue for category in categorys" class="input-small" value="{{category.mCodeValue}}"></select></td>
+                      <td><input type="text" class="input-small" ng-model="gd.source" placeholder="" readonly></td>
+                      <td><input type="text" class="input-small" ng-model="gd.service" placeholder="" readonly></td>
+                      <td><select ng-model="gd.mediaType" ng-options="mediaType.mCodeValue as mediaType.mCodeValue for mediaType in mediaTypes" class="input-small" value="{{mediaType.mCodeValue}}"></select></td>
+                      <td><input type="text" class="input-small" ng-model="gd.amount" placeholder=""></td>
+                      <td><a ng-click="removeGameMedia($index)"><i class="icon-remove icon-white"></i></a></td>
+                    </tr>
+                  </table>
+           </fieldset>
+
           <div class="offset3">
             <a href="#/media"><button type="reset" class="btn">Cancel</button></a>
             <button type="submit" class="btn btn-primary">Save</button>
