--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -422,8 +422,13 @@
         <tbody>
             <tr ng-repeat="financialtransaction in financialtransactions.currentPageItems  | filter:filterText">
                 
-                <td><a href="#/viewfinancialtran/{{financialtransaction.transactionId}}/{{client.id}}">{{financialtransaction.transactionId}}</a></td>
-                <td><a href="#/viewfinancialtran/{{financialtransaction.transactionId}}/{{client.id}}">{{financialtransaction.transDate | DateFormat}}</a></td>
+               <td ng-show="financialtransaction.transactionType =='INVOICE'">
+                <a href="#/viewfinancialtran/{{financialtransaction.transactionId}}/{{client.id}}">{{financialtransaction.transactionId}}</a></td>
+                <td ng-show="financialtransaction.transactionType =='INVOICE'">
+                <a href="#/viewfinancialtran/{{financialtransaction.transactionId}}/{{client.id}}">{{financialtransaction.transDate | DateFormat}}</a></td>
+  
+                <td ng-show="financialtransaction.transactionType =='PAYMENT' || financialtransaction.transactionType =='ADJUSTMENT'">{{financialtransaction.transactionId}}</td>
+                <td ng-show="financialtransaction.transactionType =='PAYMENT' || financialtransaction.transactionType =='ADJUSTMENT'">{{financialtransaction.transDate | DateFormat}}</td>
                 <td>{{financialtransaction.transactionType}}</td>
                 <td>{{financialtransaction.creditAmount}}</td>
                 <td>{{financialtransaction.amount}}</td>
