--- a/app/views/prospects/editprospects.html
+++ b/app/views/prospects/editprospects.html
@@ -16,202 +16,220 @@
           <h3>Personal Details</h3>
 			<table>
 			<tr>
-				<td>
-					<table>
-						<tr>
-	
-									<td>
-										<div class="control-group">
-		            					<label class="control-label" for="prospectType">{{ 'label.create.type' | translate }}</label>
-		            					<div class="controls">
-		              					<input type="radio" ng-model="editprospects.prospectType" value="1" ng-change="resetCredits()">Individual
-		              					<input type="radio" ng-model="editprospects.prospectType" value="2" ng-change="resetCredits()">Corporate
-		            					</div>
-		          						</div>
-          									
-            						</td>
-            						<td>
-								<div class="control-group">
-            					<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="homePhoneNumber" ng-model="editprospects.homePhoneNumber">
-            					</div>
-          						</div>
-							</td>
-							</tr>
-							<tr>
 							<td>
-								<div class="control-group">
+								<table>
+									<tr>
+										<td>
+										<div class="control-group">
+			            				 <label class="control-label" for="prospectType">{{ 'label.create.type' | translate }}</label>
+				            				<div class="controls">
+				              					<input type="radio" ng-model="editprospects.prospectType" value="1" ng-change="resetCredits()">Individual
+				              					<input type="radio" ng-model="editprospects.prospectType" value="2" ng-change="resetCredits()">Corporate
+				            				</div>
+			          					</div>	
+										</td>
+									</tr>
+									<tr>
+										<td>
+										<div class="control-group">
             					<label class="control-label" for="firstName">{{ 'label.firstname' | translate }}</label>
             					<div class="controls">
               					<input type="text" id="firstName" ng-model="editprospects.firstName">
            						 </div>
           						</div>
-							</td>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="workPhoneNumber">{{ 'label.officephone' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="workPhoneNumber" ng-model="editprospects.workPhoneNumber">
-            					</div>
-          						</div>
-							</td>
-							</tr>
-							<tr>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="middleName">{{ 'label.middlename' | translate }}</label>
-            					<div class="controls">
-             					 <input type="text" id="middleName" ng-model="editprospects.middleName">
-            					</div>
-          						</div>
-							</td>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="mobileNumber">{{ 'label.mobilephone' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="mobileNumber" ng-model="editprospects.mobileNumber">
-            					</div>
-          						</div>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<div class="control-group">
-           					 		<label class="control-label" for="lastName">{{ 'label.lastname' | translate }}</label>
-            						<div class="controls">
-              						<input type="text" id="lastName" ng-model="editprospects.lastName">
-            						</div>
-          							</div>
-								</td>
-								<td>
-									<div class="control-group">
-            						<label class="control-label" for="email">{{ 'label.emailid' | translate }}</label>
-            						<div class="controls">
-              						<input type="text" id="email" ng-model="editprospects.email">
-            						</div>
-          							</div>
-								</td>
-							</tr>
-					</table>
-			
-				</td>
-			</tr>
-			</table>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<div class="control-group">
+					            				<label class="control-label" for="middleName">{{ 'label.middlename' | translate }}</label>
+					            				<div class="controls">
+					             				 <input type="text" id="middleName" ng-model="editprospects.middleName">
+					            				</div>
+				          					</div>
+										</td>
+									</tr>
+									<tr>
+										<td>
+										<div class="control-group">
+		           					 		<label class="control-label" for="lastName">{{ 'label.lastname' | translate }}</label>
+		            						<div class="controls">
+		              						<input type="text" id="lastName" ng-model="editprospects.lastName">
+		            						</div>
+	          							</div>
+										</td>
+									</tr>
+								</table>
+            					</td>
+            					<td>
+            					<table>
+            						<tr>
+            							<td>
+            								<div class="control-group">
+			           						<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}</label>
+			            					<div class="controls">
+			              						<input type="text" id="homePhoneNumber" ng-model="editprospects.homePhoneNumber">
+			            					</div>
+			         						</div>		
+            							</td>
+            						</tr>
+            						<tr>
+            							<td>
+            							<div class="control-group">
+			            					<label class="control-label" for="workPhoneNumber">{{ 'label.officephone' | translate }}</label>
+			            					<div class="controls">
+			              					<input type="text" id="workPhoneNumber" ng-model="editprospects.workPhoneNumber">
+			            					</div>
+		          						</div>
+            							</td>
+            						</tr>
+            						<tr>
+            							<td>
+            								<div class="control-group">
+			            					<label class="control-label" for="mobileNumber">{{ 'label.mobilephone' | translate }}</label>
+			            					<div class="controls">
+			              					<input type="text" id="mobileNumber" ng-model="editprospects.mobileNumber">
+			            					</div>
+			          						</div>
+            							</td>
+            						</tr>
+            						<tr>
+            							<td>
+	            							<div class="control-group">
+		            						<label class="control-label" for="email">{{ 'label.emailid' | translate }}</label>
+		            						<div class="controls">
+		              						<input type="text" id="email" ng-model="editprospects.email">
+		            						</div>
+		          							</div>
+            							</td>
+            						</tr>
+            				</table>			
+					</td>
+				</tr>
+			</table>	
 			<h3>Address Details</h3>
 			<table>
-			<tr>
-				<td>
-					<table>
-						<tr>
+					<tr>
 							<td>
-								<div class="control-group">
-            					<label class="control-label" for="address">{{ 'label.address' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="address" ng-model="editprospects.address">
-            					</div>
-          						</div>
-							</td>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="sourceOfPublicity">{{ 'label.source' | translate }}</label>
-            					<div class="controls">
-              					<select ng-model="editprospects.sourceOfPublicityInt"  ng-options="sourceOfPublicityData.id as sourceOfPublicityData.mCodeValue for sourceOfPublicityData in sourceOfPublicityDatas" value="{{sourceOfPublicityData.id}}">
-             					 </select>
-            					</div>
-          						</div>
-							</td>
-							</tr>
-							<tr>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="streetArea">{{ 'label.street/area' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="streetArea" ng-model="editprospects.streetArea">
-           						 </div>
-          						</div>
-							</td>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="preferredPlan">{{ 'label.plan' | translate }}</label>
-            					<div class="controls">
-              					<select ng-model="editprospects.preferredPlanInt"  ng-options="planData.id as planData.planDescription for planData in planDatas" value="{{planData.id}}">
-             					 </select>
-            					</div>
-          						</div>
-							</td>
-							</tr>
-							<tr>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="cityDistrict">{{ 'label.city/district' | translate }}</label>
-            					<div class="controls">
-             					 <input type="text" id="city" ng-model="editprospects.cityDistrict" list="citylist" ng-change="getStateAndCountry(editprospects.cityDistrict)">
-            					</div>
-          						</div>
-          						<datalist id="citylist">
-                   								<option  data-ng-repeat="cityData in cityDatas" value="{{cityData}}"></option>
-            				    </datalist>
-							</td>
-							<td>
-								<div class="control-group">
-										<label class="control-label">{{ 'label.nextcalltime' |
-											translate }}</label>
-										<div class="controls">
-											<input type="text" readonly datepicker-pop="dd MMMM yyyy"
-												ng-model="first.date"
-												is-open="opened2" min="minDate" max="'2020-06-22'"
-												date-disabled="disabled(date, mode)" style="width:130px;background-color:#FFFFFF;"/>
-												<div class="input-append bootstrap-timepicker">
-										<input id="timepicker1" type="text" readonly ng-model="first.time" style="width:60px;background-color:#FFFFFF;">
-										<span class="add-on"><i class="icon-time"></i></span>
-									</div>
-										</div>
-									</div>
-							</td>
-							</tr>
-							<tr>
-								<td>
+							<table>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="address">{{ 'label.address' | translate }}</label>
+		            					<div class="controls">
+		              					<input type="text" id="address" ng-model="editprospects.address">
+		            					</div>
+		          						</div>									
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="streetArea">{{ 'label.street/area' | translate }}</label>
+		            					<div class="controls">
+		              					<input type="text" id="streetArea" ng-model="editprospects.streetArea">
+		           						 </div>
+		          						</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="cityDistrict">{{ 'label.city/district' | translate }}</label>
+		            					<div class="controls">
+		             					 <input type="text" id="city" ng-model="editprospects.cityDistrict" list="citylist" ng-change="getStateAndCountry(editprospects.cityDistrict)">
+		            					</div>
+		          						</div>
+		          						<datalist id="citylist">
+		                   								<option  data-ng-repeat="cityData in cityDatas" value="{{cityData}}"></option>
+		            				    </datalist>		
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+	           					 		<label class="control-label" for="state">{{ 'label.state' | translate }}</label>
+	            						<div class="controls">
+	              						<input type="text" id="state" ng-model="editprospects.state">
+	            						</div>
+	          							</div>	
+									</td>
+								</tr>
+								<tr>
+									<td>
 									<div class="control-group">
-           					 		<label class="control-label" for="state">{{ 'label.state' | translate }}</label>
-            						<div class="controls">
-              						<input type="text" id="state" ng-model="editprospects.state">
-            						</div>
-          							</div>
-								</td>
-								<td rowspan="3">
-									<div class="control-group">
-      								<label class="control-label" for="note">{{ 'label.note' | translate }}</label>
-     								 <div class="controls">
-        								<textarea rows="7" ng-model="editprospects.note" style="width: 291px; height: 122px;"></textarea>
-      								 </div>
-    								</div>
-								</td>
-							</tr>
-							<tr>
+	            					<label class="control-label" for="country">{{ 'label.country' | translate }}</label>
+	            					<div class="controls">
+	              					<input type="text" id="country" ng-model="editprospects.country">
+	           						 </div>
+	          						</div>
+	          						</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="zipCode">{{ 'label.zipcode' | translate }}</label>
+		            					<div class="controls">
+		              					<input type="text" id="zipCode" ng-model="editprospects.zipCode">
+		            					</div>
+		          						</div>
+									</td>
+								</tr>
+							</table>
+								
+							</td>
 							<td>
-								<div class="control-group">
-            					<label class="control-label" for="country">{{ 'label.country' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="country" ng-model="editprospects.country">
-           						 </div>
-          						</div>
-							</td>
-							
-							</tr>
-							<tr>
-								<td>
-								<div class="control-group">
-            					<label class="control-label" for="zipCode">{{ 'label.zipcode' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="zipCode" ng-model="editprospects.zipCode">
-            					</div>
-          						</div>
-							</td>
-							</tr>
-					</table>
+							<table>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="sourceOfPublicity">{{ 'label.source' | translate }}</label>
+		            					<div class="controls">
+		              					<select ng-model="editprospects.sourceOfPublicityInt"  ng-options="sourceOfPublicityData.id as sourceOfPublicityData.mCodeValue for sourceOfPublicityData in sourceOfPublicityDatas" value="{{sourceOfPublicityData.id}}">
+		             					 </select>
+		            					</div>
+		            					</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+		            					<label class="control-label" for="preferredPlan">{{ 'label.plan' | translate }}</label>
+		            					<div class="controls">
+		              					<select ng-model="editprospects.preferredPlanInt"  ng-options="planData.id as planData.planDescription for planData in planDatas" value="{{planData.id}}">
+		             					 </select>
+		            					</div>
+		          						</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="control-group">
+											<label class="control-label">{{ 'label.nextcalltime' | translate }}</label>
+											<div class="controls">
+												<input type="text" readonly datepicker-pop="dd MMMM yyyy"
+													ng-model="first.date"
+													is-open="opened2" min="minDate" max="'2020-06-22'"
+													date-disabled="disabled(date, mode)" style="width:130px;background-color:#FFFFFF;"/>
+													<input id="timepicker1" type="text" readonly ng-model="first.time" style="width:60px;background-color:#FFFFFF;">
+											</div>
+									</div>
+									</td>
+								</tr>
+								<tr>
+									<td rowspan="3">
+										<div class="control-group">
+	      								<label class="control-label" for="note">{{ 'label.note' | translate }}</label>
+	     								 <div class="controls">
+	        								<textarea rows="7" ng-model="editprospects.note" style="width: 211px; height: 121px;"></textarea>
+	      								 </div>
+	    								</div>
+									</td>
+								</tr>
+								
+							</table>							
+						</td>
 			
-				</td>
 			</tr>
 			</table>
   			
