editprospect required field are indicated

--- a/app/views/prospects/createprospects.html
+++ b/app/views/prospects/createprospects.html
@@ -250,7 +250,7 @@
 											<div class="control-group">
 		      								<label class="control-label" for="note">{{ 'label.note' | translate }}<span class="required">*</span></label>
 		     								 <div class="controls">
-		        								<textarea rows="7" ng-model="formData.note" style="width: 211px; height: 121px;"></textarea> <!-- style="width: 291px; height: 122px;" -->
+		        								<textarea rows="7" id="note" ng-model="formData.note" style="width: 211px; height: 121px;"></textarea> <!-- style="width: 291px; height: 122px;" -->
 
 		      								 </div>
 		    								</div>
