made alignment to required fields

--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -532,7 +532,7 @@
 				<tr class="graybg">
 				 	<th>{{'table.heading.id' | translate}}</th>
 					<th>{{'table.heading.transactiontype' | translate}}</th>
-					<th>{{'table.heading.transactiondate' | translate}}</th>
+					<th style="width:125px;">{{'table.heading.transactiondate' | translate}}</th>
 					<th>{{'table.heading.user' | translate}}</th>
 					<th>{{'table.heading.history' | translate}}</th>
 				</tr>
