--- a/app/views/organization/createmedia.html
+++ b/app/views/organization/createmedia.html
@@ -19,7 +19,7 @@
             <label class="control-label" for="mediaCategory">{{ 'label.media.type' | translate }}</label>
 	          	<div class="controls">
 			       <button type="button" class="btn btn-primary" ng-model="mediaCategory" btn-radio="'Left'" ng-click="setMovieScreen()">Movies</button>
-			       <button type="button" class="btn btn-primary" ng-model="mediaCategory" btn-radio="'Right'" ng-click="setGameScreen()">Games</button>
+			       <!-- <button type="button" class="btn btn-primary" ng-model="mediaCategory" btn-radio="'Right'" ng-click="setGameScreen()">Games</button> -->
 				</div>
             </div>
           </td>	
