New Activation Process

--- a/app/views/system/viewschedulerjobhistory.html
+++ b/app/views/system/viewschedulerjobhistory.html
@@ -21,7 +21,7 @@
                 <td>{{history.jobRunStartTime}}</td>  
                 <td>{{history.status}}</td>
                 <td>{{history.triggerType}}</td>
-                <td><a ng-click="logFile(history.runFilePath)"><i class=" icon-download-alt icon-white"></i> Download</a></td>
+                <td><a ng-click="logFile(history.version)"><i class=" icon-download-alt icon-white"></i> Download</a></td>
                 <!-- <td>{{history.runFilePath}}</td> -->
             </tr>
         </tbody>
