--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -391,7 +391,8 @@ a:hover
 }
 
 tr.pointer-main:hover {
-        color: #007FFF;
+      background-color: #007FFF;
+    color: #ffffff !important;
 }
 
 .grbgcolor {
