--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -4,6 +4,7 @@
     </ul>
     <div class="pull-right">
         <a href="#/createclient" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create Client</a>
+          <a href="#/createclientwizard" class="btn btn-primary"><i class="icon-plus icon-white"></i> New Activation</a>
     </div>
 </div>
 <div class="row-fluid" ng-controller="ClientController">
@@ -22,12 +23,12 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="client in clients.currentPageItems  | filter:filterText">
-                <td><a href="#/viewclient/{{client.id}}"><i class="icon-stop {{client.status.code | StatusLookup}}"></i>&nbsp;{{client.displayName}}</a></td>
-                <td><a href="#/viewclient/{{client.id}}">{{client.accountNo}}</a></td>
-                <td>{{client.officeName}}</td>
-                <td>{{client.hwSerialNumber}}</td>
-                <td>{{client.balanceAmount}}</td>
+            <tr class="pointer-main" ng-repeat="client in clients.currentPageItems  | filter:filterText" >
+                <td class="pointer" data-ng-click="routeTo(client.id)"><i class="icon-stop {{client.status.code | StatusLookup}}"></i>&nbsp;{{client.displayName}}</a></td>
+                <td class="pointer" data-ng-click="routeTo(client.id)">{{client.accountNo}}</td>
+                <td class="pointer" data-ng-click="routeTo(client.id)">{{client.officeName}}</td>
+                <td class="pointer" data-ng-click="routeTo(client.id)">{{client.hwSerialNumber}}</td>
+                <td class="pointer" data-ng-click="routeTo(client.id)">{{client.balanceAmount}}</td>
             </tr>
         </tbody>
     </table>
