--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -5,6 +5,7 @@
             <li class="active">{{'label.manageschedulerjobs' | translate}}</li>
         </ul>
 </div>
+</div>
 <div class="row-fluid" ng-controller="SchedulerJobsController">
     <table>
         <tr>
@@ -37,7 +38,7 @@
         <tbody>
             <tr ng-repeat="job in jobs">
                 <td><input type="checkbox" ng-model="active" ng-true-value="true" ng-false-value="false"
-                     ng-click="runJobSelected(job.jobId, active)"></td>
+                     ng-click="runJobSelected(job, active)"></td>
                 <td><a href="#/viewschedulerjob/{{job.jobId}}">{{job.displayName}}</a></td>
                 <td>{{job.active}}</td>
                 <td><input type="checkbox" class="changeStatus" ng-model="job.active" id="changeStatus" ng-click="selectAll(job)"/></td>
@@ -52,4 +53,35 @@
       <button class="btn btn-primary" ng-click="runSelectedJobs()">Run Selected Jobs</button>
       <button class="btn btn-primary" ng-click="refresh()">Refresh</button>
     </div>
-<div>
+ <script type="text/ng-template" id="approve1.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">{{'dialog.invoice.title.message' | translate}}</h3>
+                    </div>
+                    <div class="modal-body modal-big" style="height:270px;">
+                       	<div class="control-group">
+							<div class="controls">
+						 	 <label class="control-label" style="color:red;" ng-show="error.length>0">{{error | translate}}</label>
+							</div>	
+						</div>
+						 <div class="control-group">
+                           <label class="control-label">{{'label.job.reportname' | translate }}<span class="required">*</span></label>
+                           <div class="controls">
+                           <select ng-model="formData.reportName"  ng-options="reportData.batchName as reportData.batchName for reportData in reportDatas" value="{{office.id}}" >
+                           </select>
+                        </div>
+ <div class="control-group">
+                <label class="control-label">{{ 'label.job.messagetemplate' | translate }}<span class="required">*</span></label>
+                <div class="controls">
+                  <select ng-model="formData.messageTempalate"  ng-options="billingMessageData.templateDescription as billingMessageData.templateDescription for billingMessageData in billingMessageDatas" value="{{office.id}}">
+                </select>
+                </div>
+              </div>
+                      </div>
+                   
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="accept(start.date)">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
+</div>
