Added job parameters in job

--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -33,7 +33,7 @@
         </tbody>
     </table>
     <ul class="pager">
-        <li class="previous"><a ng-click="clients.previous()" href="" ng-disabled="!clients.hasPrevious()">&larr; Prev</a></li>
-        <li class="next" ><a ng-click="clients.next()" href="" ng-disabled="!clients.hasNext()">Next &rarr;</a></li>
+        <li class="previous"><a  id="prev" ng-click="clients.previous()" href="" ng-disabled="!clients.hasPrevious()">&larr; Prev</a></li>
+        <li class="next" ><a  id="next"   ng-click="clients.next()" href="" ng-disabled="!clients.hasNext()">Next &rarr;</a></li>
     </ul>
 </div>
