--- a/app/views/reports/run_reports.html
+++ b/app/views/reports/run_reports.html
@@ -54,7 +54,7 @@
               </select>
             </div>
         </div>
-        <span><a ng-click="runReport()" class="btn btn-primary control"><i class="icon-play icon-white"></i>&nbsp;&nbsp;{{ 'label.button.runreport' | translate }}</a></span> 
+        <span><a id="run" ng-click="runReport()" class="btn btn-primary control"><i class="icon-play icon-white"></i>&nbsp;&nbsp;{{ 'label.button.runreport' | translate }}</a></span> 
     </div>
      <div style="visibility: hidden">
         <table>
