--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -55,7 +55,7 @@
     </div>
  <script type="text/ng-template" id="approve1.html">
                     <div class="modal-header silver">
-                        <h3 class="bolder">{{'dialog.invoice.title.message' | translate}}</h3>
+                        <h3 class="bolder">{{'dialog.invoice.title.job' | translate}}</h3>
                     </div>
                     <div class="modal-body modal-big" style="height:270px;">
                        	<div class="control-group">
