--- a/app/views/administration/createuser.html
+++ b/app/views/administration/createuser.html
@@ -74,8 +74,8 @@
             </div>
           </div>
           <div class="offset3">
-            <a href="#/users"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/users"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="save" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
