--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -142,8 +142,8 @@
            </tr>
            </table> 
             <div class="offset3">
-              <a href="#/clients"><button type="reset" class="btn">Cancel</button></a>
-              <button type="submit" ng-disabled="!createclientform.$valid" class="btn btn-primary">Save</button>
+              <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+              <button id="save" type="submit" ng-disabled="!createclientform.$valid" class="btn btn-primary">Save</button>
             </div>
         </fieldset>
       </form>
