--- a/app/views/organization/createoffice.html
+++ b/app/views/organization/createoffice.html
@@ -56,8 +56,8 @@
             </tr>
           </table>
           <div class="offset3">
-            <a href="#/offices"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/offices"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="save" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
