--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -58,6 +58,14 @@
                  <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.exipiryDate" is-open="opened" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)"/>
             </div>
            </div>
+           <div class="control-group" ng-show="formData.displayName =='Auto Exipiry'">
+                <label class="control-label" for="isDynamic">{{ 'label.job.isautorenewal' | translate }}</label>
+                   <div class="controls">
+                      <label class="checkbox">
+                          <input type="checkbox" ng-model="formData.isAutoRenewal">
+                      </label>
+                   </div>
+           </div>
            <div class="control-group">
                 <label class="control-label" for="isDynamic">{{ 'label.job.isDynamic' | translate }}</label>
                    <div class="controls">
