--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -72,7 +72,7 @@
  <div class="control-group">
                 <label class="control-label">{{ 'label.job.messagetemplate' | translate }}<span class="required">*</span></label>
                 <div class="controls">
-                  <select ng-model="formData.messageTempalate"  ng-options="billingMessageData.templateDescription as billingMessageData.templateDescription for billingMessageData in billingMessageDatas" value="{{office.id}}">
+                  <select ng-model="formData.messageTemplate"  ng-options="billingMessageData.templateDescription as billingMessageData.templateDescription for billingMessageData in billingMessageDatas" value="{{office.id}}">
                 </select>
                 </div>
               </div>
